fix(do/ansible): fix ansible playbooks

--- a/generators/ansible-do/templates/ansible/stack/group_vars/portainer.yml
+++ b/generators/ansible-do/templates/ansible/stack/group_vars/portainer.yml
@@ -2,6 +2,7 @@ portainer__deploy_dir: "{{ deploy_dir }}/portainer"
 portainer__deploy_group: "{{ deploy_group }}"
 portainer__deploy_user: "{{ deploy_user }}"
 portainer__domain: "portainer.{{ domain }}"
+portainer__image: "2.27.0"
 portainer__label: "portainer"
 portainer__network: "{{ network_traefik }}"
 portainer__nfs_ip: "{{ nfs_server_ip }}"
