--- a/generators/ansible-do/templates/ansible/stack/group_vars/all.yml
+++ b/generators/ansible-do/templates/ansible/stack/group_vars/all.yml
@@ -14,6 +14,7 @@ nfs_server_ip: PRIVATE_NFS_IP_ADDRESS
 nfs: false
 
 postgres_version: 16
+postgres_versions: [15,16,17]
 
 ssh_key_folder: ../../../../ssh-keys
 ssh_keys:
