--- a/generators/ansible-do/templates/ansible/stack/group_vars/all.yml
+++ b/generators/ansible-do/templates/ansible/stack/group_vars/all.yml
@@ -14,7 +14,10 @@ nfs_server_ip: PRIVATE_NFS_IP_ADDRESS
 nfs: false
 
 postgres_version: 16
-postgres_versions: [15,16,17]
+postgres_versions:
+  - 17
+  - 16
+  - 15
 
 ssh_key_folder: ../../../../ssh-keys
 ssh_keys:
