--- a/generators/ansible-do/templates/ansible/stack/makefile
+++ b/generators/ansible-do/templates/ansible/stack/makefile
@@ -64,6 +64,10 @@ setup.portainer:
 	@printf "\033[0;3ansible/2m>>> Set up portainer\033[0m\n"
 	ansible-playbook plays/portainer.yml
 
+setup.postgres:
+	@printf "\033[0;3ansible/2m>>> Set up postgres\033[0m\n"
+	ansible-playbook plays/postgres.yml
+
 setup.swarm:
 	@printf "\033[0;3ansible/2m>>> Set up docker swarm\033[0m\n"
 	ansible-playbook plays/swarm.yml
