--- a/generators/ansible-do/templates/ansible/stack/makefile
+++ b/generators/ansible-do/templates/ansible/stack/makefile
@@ -12,14 +12,6 @@ dirs.nocodb:
 	@printf "\033[0;32m>>> Create nocodb data directories\033[0m\n"
 	ansible-playbook plays/data-dirs.yml --tags nocodb
 
-dirs.postgres:
-	@printf "\033[0;32m>>> Create postgres database directories\033[0m\n"
-	ansible-playbook plays/data-dirs.yml --tags postgres
-
-docker.data-folder:
-	@printf "\033[0;32m>>> Change docker data folder\033[0m\n"
-	ansible-playbook plays/docker-data-dir.yml
-
 install:
 	@printf "\033[0;32m>>> Install ansible roles\033[0m\n"
 	ansible-galaxy install -r requirements.yml --force
@@ -27,6 +19,10 @@ install:
 portainer.down:
 	@printf "\033[0;32m>>> Set up portainer\033[0m\n"
 	ansible-playbook plays/portainer.yml --extra-vars="portainer__state=stopped"
+
+postgres:
+	@printf "\033[0;3ansible/2m>>> Set up postgres data folders\033[0m\n"
+	ansible-playbook plays/postgres.yml
 
 setup.docker:
 	@printf "\033[0;3ansible/2m>>> Set up docker swarm\033[0m\n"
@@ -63,10 +59,6 @@ setup.docker-volume-driver:
 setup.portainer:
 	@printf "\033[0;3ansible/2m>>> Set up portainer\033[0m\n"
 	ansible-playbook plays/portainer.yml
-
-setup.postgres:
-	@printf "\033[0;3ansible/2m>>> Set up postgres\033[0m\n"
-	ansible-playbook plays/postgres.yml
 
 setup.swarm:
 	@printf "\033[0;3ansible/2m>>> Set up docker swarm\033[0m\n"
