fix: fixed postgres playbook

--- a/generators/ansible-do/templates/ansible/stack/plays/postgres.yml
+++ b/generators/ansible-do/templates/ansible/stack/plays/postgres.yml
@@ -6,18 +6,18 @@
       file:
         group: "nogroup"
         owner: "nobody"
-        path: "/mnt/nfs/postgres/{{ item }}/{{ subdir }}"
+        path: "/mnt/nfs/postgres/{{ item.0 }}/{{ item.1 }}"
         state: directory
         recurse: true
-      with_subelements:
+      with_nested:
         - "{{ postgres_versions }}"
-        - subdirs
+        - "{{ subdirs }}"
       vars:
         subdirs:
           - "backups"
           - "data"
-  when:
-    - nfs
+      when:
+        - nfs
 
 - name: Create postgres data directories on swarm node
   hosts: portainer
@@ -26,14 +26,15 @@
     - file:
         group: "{{ deploy_group }}"
         owner: "{{ deploy_user }}"
-        path: "{{ item }}"
+        path: "{{ item.0 }}/{{ item.1 }}"
         state: directory
         recurse: true
+      with_nested:
         - "{{ postgres_versions }}"
-        - subdirs
+        - "{{ subdirs }}"
       vars:
         subdirs:
           - "backups"
           - "data"
-  when:
-    - not nfs
+      when:
+        - nfs
