chore: add postgres label docker playbook and tags

--- a/generators/ansible-do/templates/ansible/stack/plays/docker.yml
+++ b/generators/ansible-do/templates/ansible/stack/plays/docker.yml
@@ -22,6 +22,18 @@
   tags:
     - docker-labels
 
+- name: Label postgres node
+  hosts: postgres
+  tasks:
+    - name: Get node id
+      command: "docker info -f {% raw %}'{{.Swarm.NodeID}}'{% endraw %}"
+      register: node_id
+    - name: label_node
+      command: "docker node update --label-add postgres=true {{ node_id.stdout }}"
+      ignore_errors: yes
+  tags:
+    - docker-labels
+    
 - name: Label traefik node
   hosts: traefik
   tasks:
