fix(do/ansible): fix mariadb playbook

--- a/generators/ansible-do/templates/ansible/stack/plays/mariadb.yml
+++ b/generators/ansible-do/templates/ansible/stack/plays/mariadb.yml
@@ -19,7 +19,7 @@
       when:
         - nfs
 
-- name: Create mariadb data directories on swarm node
+- name: Create mariadb data directories on swarm node(s)
   hosts: mariadb
   become: true
   tasks:
