--- a/generators/ansible-do/templates/ansible/stack/group_vars/portainer.yml
+++ b/generators/ansible-do/templates/ansible/stack/group_vars/portainer.yml
@@ -4,7 +4,7 @@ portainer__deploy_user: "{{ deploy_user }}"
 portainer__domain: "portainer.{{ domain }}"
 portainer__image: "2.27.0"
 portainer__label: "portainer"
-portainer__network: "{{ network_traefik }}"
+portainer__network: "{{ network_public }}"
 portainer__nfs_ip: "{{ nfs_server_ip }}"
 portainer__state: "started"
 portainer__use_nfs: "{{ nfs }}"
