--- a/generators/ansible-do/templates/ansible/stack/plays/docker.yml
+++ b/generators/ansible-do/templates/ansible/stack/plays/docker.yml
@@ -35,7 +35,7 @@
     - labels
 
 - name: Setup cron jobs
-  hosts: leader
+  hosts: all
   become: true
   tasks:
     - cron:
@@ -49,7 +49,7 @@
     - cron
 
 - name: Setup logrotate for docker container logs
-  hosts: leader
+  hosts: all
   become: true
   tasks:
     - blockinfile:
