fix(do-swarm): rename inventory hosts and groups

--- a/generators/ansible-do/templates/ansible/stack/group_vars/all.yml
+++ b/generators/ansible-do/templates/ansible/stack/group_vars/all.yml
@@ -12,7 +12,7 @@ mariadb_versions:
 network_private: private
 network_public: public
 nfs: <%+ useNfs %>
-nfs_server_ip: PRIVATE_NFS_IP_ADDRESS
+nfs_server_ip: NFS_SERVER_PRIVATE_IP
 
 postgres_versions:
   - 17
