DO swarm Create new combined generator (#33)
* feat: added combined generators do-swarm generator

* chore: removed line

* chore: added prompt for do-swarm and option on generator

* chore: correction of name variable and putting it in alphabetical sort

* chore: corrected some syntax

* chore: corrected some phrasing

* chore: modified do-swarm variables and specifying of variable given to sub generators

* chore: little changes

* chore: added aws-credentials and aws-resources

* chore: added prompt

* chore: modified some generator

* chore: updated generator and made a README

* chore: modified readme

* chore: updated readme

* chore: modified readme, aws-credentials config file, removed - from traefik playbook

* fix(do/swarm): fix do-swarm generator

* chore: modified readme and do-nfs-server

* chore: updated prompt

* chore: added do-swarm-workers

* chore: modified playbook

* chore: change inventory

* chore: changed playbook

* chore: changed ansible inventory and playbook

* Nfs traefik portainer (#47)

* chore: add nfs directory and modified playbook

* chore: added directories creation on nfs server

* chore: changed variables

* chore: added comment

* chore: changes

* chore: update

* fix(do/ansible): fix traefik playbook

* fix(do/ansible): fix portainer playbook

* fix(do/ansible): remove local volume driver

---------

Co-authored-by: Anthony Phothirath <anthony.phothirath@hotmail.com>
Co-authored-by: Olivier Pichon <op@dzango.com>

* chore: changed default projectName

* chore: add nfs-common option for do swarm-leader

* chore: namesuffix changed

* chore: prompt changes

* chore: update prompt

* chore: testing

* chore: removed sshLeys prompt fixed nfs prompt

* fix: ansible nfs

* chore: add useNfs in ansible

* fix: fixing

* chore: syntax

* chore: modify variables

* chore(do/swarm-leader): fix prompts

* fix(do/swarm-workers): fix prompts

* chore(do/swarm-leader): fix prompts

* fix(do/swarm-workers): fix prompts

* fix(do.nfs-server)

--- a/generators/ansible-do/templates/ansible/stack/group_vars/all.yml
+++ b/generators/ansible-do/templates/ansible/stack/group_vars/all.yml
@@ -1,22 +1,19 @@
 aws_secrets_id: SECRET_ID
 
 deploy_dir: /mnt/data
-deploy_group: USERNAME
-deploy_user: USERNAME
+deploy_group: <%= username %>
+deploy_user: <%= username %>
 
-domain: DOMAIN
+domain: <%= domain %>
 
 mariadb_versions:
   - 11
 
-minio_enabled: false
-
 network_private: private
 network_public: public
-nfs: false
-nfs_server_ip: PRIVATE_NFS_IP_ADDRESS
+nfs: <%+ useNfs %>
+nfs_server_ip: NFS_SERVER_PRIVATE_IP
 
-postgres_version: 16
 postgres_versions:
   - 17
   - 16
