--- a/generators/do-swarm-workers/templates/do-swarm-workers/Pulumi.stack.yaml
+++ b/generators/do-swarm-workers/templates/do-swarm-workers/Pulumi.stack.yaml
@@ -1,5 +1,5 @@
 config:
-#  <%= projectName %>:count: 2
+#  <%= projectName %>:count: <%= count %>
   <%= projectName %>:image: docker-20-04
   <%= projectName %>:name: <%= prefix %>-<%= environment %>
   <%= projectName %>:pathToSshKeysFolder: "../../ssh-keys"
@@ -8,12 +8,12 @@ config:
   <%= projectName %>:protect: "false"
   <%= projectName %>:publicKeyNames:
     - KEY_NAME
-  <%= projectName %>:region: sgp1
+  <%= projectName %>:region: <%= region %>
   <%= projectName %>:retainOnDelete: "false"
-  <%= projectName %>:size: s-1vcpu-1gb
+  <%= projectName %>:size: <%= size %>
   <%= projectName %>:sshKeyNames: 
     - ...
-  <%= projectName %>:userGroups: group1,group2
-  <%= projectName %>:username: USERNAME
+  <%= projectName %>:userGroups: docker,group2
+  <%= projectName %>:username: <%= username %>
 #  <%= projectName %>:vpcUuid: VPC UUID
 #  <%= projectName %>:vpcStack: <%= prefix %>-do-resources
