chore: adding vpc to the combined generator

--- a/generators/aws-vpc/templates/aws-vpc/Pulumi.stack.yaml
+++ b/generators/aws-vpc/templates/aws-vpc/Pulumi.stack.yaml
@@ -16,4 +16,4 @@ config:
       - 172.16.160.0/21
       name: public
       type: Public
-  <%= projectName %>:suffix: "YYYYMMDD"
+  <%= projectName %>:suffix: <%= suffix %>
