--- a/generators/aws-ebs/templates/aws-ebs/Pulumi.stack.yaml
+++ b/generators/aws-ebs/templates/aws-ebs/Pulumi.stack.yaml
@@ -6,4 +6,4 @@ config:
   <%= projectName %>:name: <%= prefix %>-<%= environment %>
   <%= projectName %>:protect: false
   <%= projectName %>:retainOnDelete: false
-  <%= projectName %>:suffix: "YYYYMMDD"
+  <%= projectName %>:suffix: <%= suffix %>
