--- a/generators/aws-eip/templates/aws-eip/Pulumi.stack.yaml
+++ b/generators/aws-eip/templates/aws-eip/Pulumi.stack.yaml
@@ -2,4 +2,4 @@ config:
   <%= projectName %>:name: <%= prefix %>-<%= environment %>
   <%= projectName %>:protect: false
   <%= projectName %>:retainOnDelete: false
-  <%= projectName %>:suffix: "YYYYMMDD"
+  <%= projectName %>:suffix: <%= suffix %>
