--- a/generators/aws-route53/templates/aws-route53/Pulumi.stack.yaml
+++ b/generators/aws-route53/templates/aws-route53/Pulumi.stack.yaml
@@ -1,7 +1,7 @@
 config:
   <%= projectName %>:aliases: 
     - "*"
-  <%= projectName %>:domain: MYDOMAIN.COM
+  <%= projectName %>:domain: <%= domain %>
   <%= projectName %>:name: <%= prefix %>-<%= environment %>
   <%= projectName %>:protect: false
   <%= projectName %>:retainOnDelete: false
