--- a/generators/aws-swarm-leader/templates/aws-swarm-leader/Pulumi.stack.yaml
+++ b/generators/aws-swarm-leader/templates/aws-swarm-leader/Pulumi.stack.yaml
@@ -5,7 +5,7 @@ config:
   <%= projectName %>:ebsProject: <%= prefix %>-aws-ebs
   <%= projectName %>:eipProject: <%= prefix %>-aws-eip
   <%= projectName %>:instanceProfileProject: <%= prefix %>-aws-instance-profile
-  <%= projectName %>:instanceType: t3.small
+  <%= projectName %>:instanceType: <%= size %>
   <%= projectName %>:keyName: KEYNAME
   <%= projectName %>:keypairsProject: <%= prefix %>-aws-ssh-keypairs
   <%= projectName %>:name: <%= prefix %>-<%= environment %>
