chore: updating files

--- a/generators/aws-nfs-server/templates/aws-nfs-server/Pulumi.yaml
+++ b/generators/aws-nfs-server/templates/aws-nfs-server/Pulumi.yaml
@@ -3,4 +3,4 @@ runtime:
   name: nodejs
   options:
     typescript: true
-description: PRovisions a AWS NFS server
+description: Provisions Docker swarm leader and associated resources on AWS
