--- a/generators/aws-nfs-server/templates/aws-nfs-server/package.json
+++ b/generators/aws-nfs-server/templates/aws-nfs-server/package.json
@@ -2,9 +2,11 @@
   "name": "<%= projectName %>",
   "main": "index.ts",
   "dependencies": {
-    "@dzangolab/pulumi": "<%= versions.dzangolab %>",
-    "@pulumi/digitalocean": "<%= versions.digitalocean %>",
+    "@pulumi/aws": "<%= versions.pulumi_aws %>",
+    "@pulumi/command": "^0.9",
     "@pulumi/pulumi": "<%= versions.pulumi %>"
+    "@types/nunjucks": "^3",
+    "nunjucks": "^3"
   },
   "devDependencies": {
     "@types/node": "<%= versions.types_node %>"
