chore: update prompt

--- a/generators/aws-swarm-leader/templates/aws-swarm-leader/Pulumi.stack.yaml
+++ b/generators/aws-swarm-leader/templates/aws-swarm-leader/Pulumi.stack.yaml
@@ -1,5 +1,5 @@
 config:
-  <%= projectName %>:ami: ami-XXXXXXXXXXXXXXXXX
+  <%= projectName %>:ami: <%= ami %>
   <%= projectName %>:availabilityZone: <%= availabilityZone %>
   <%= projectName %>:disableApiTermination: false
   <%= projectName %>:ebsProject: <%= prefix %>-aws-ebs
