feat(pulumi-s3-backend): fix stack config template and docs

--- a/generators/pulumi-s3-backend/templates/pulumi-s3-backend/Pulumi.stack.yaml
+++ b/generators/pulumi-s3-backend/templates/pulumi-s3-backend/Pulumi.stack.yaml
@@ -3,6 +3,7 @@ config:
     - 
   <%= projectName %>:forceDestroy: false
 #  <%= projectName %>:keyDeletionWindow: 7
+#  <%= projectName %>:name: 
   <%= projectName %>:protect: true
   <%= projectName %>:retainOnDelete: true  
-#  <%= projectName %>:secretsProvider: passphrase  
+  <%= projectName %>:secretsProvider: passphrase  
