fix(aws/nfs-server): update generator

--- a/generators/aws-nfs-server/templates/aws-nfs-server/Pulumi.stack.yaml
+++ b/generators/aws-nfs-server/templates/aws-nfs-server/Pulumi.stack.yaml
@@ -2,17 +2,21 @@ config:
   <%= projectName %>:ami: ami-xxxxxxxx
   <%= projectName %>:availabilityZone: <%= availabilityZone %>
   <%= projectName %>:disableApiTermination: false
-  <%= projectName %>:ebsProject: <%= prefix %>-aws-ebs
-  <%= projectName %>:eipProject: <%= prefix %>-aws-eip
-  <%= projectName %>:instanceProfileProject: <%= prefix %>-aws-instance-profile
+#  <%= projectName %>:instanceProfile: 
+  <%= projectName %>:instanceProfileStack: <%= prefix %>-instance-profile
   <%= projectName %>:instanceType: <%= size %>
   <%= projectName %>:keyName: KEYNAME
-  <%= projectName %>:keypairsProject: <%= prefix %>-aws-ssh-keypairs
+  <%= projectName %>:keypairsStack: <%= prefix %>-ssh-keypairs
   <%= projectName %>:name: <%= prefix %>-<%= environment %>
   <%= projectName %>:protect: "false"
   <%= projectName %>:retainOnDelete: "false"
   <%= projectName %>:rootBlockDeviceSize: 20
-  <%= projectName %>:securityGroupProject: <%= prefix %>-aws-security-group
+#  <%= projectName %>:securityGroupId: 
+  <%= projectName %>:securityGroupStack: <%= prefix %>-security-group
   <%= projectName %>:subnetId: subnet-xxxxxxxxx
   <%= projectName %>:size: <%= size %>
-  <%= projectName %>:vpcProject: <%= prefix %>-aws-vpc
+#  <%= projectName %>:tags:
+#    -
+#    -
+#  <%= projectName %>:volumeId: 
+  <%= projectName %>:volumeStack: <%= prefix %>-ebs
