--- a/generators/aws-swarm-workers/templates/aws-swarm-workers/Pulumi.stack.yaml
+++ b/generators/aws-swarm-workers/templates/aws-swarm-workers/Pulumi.stack.yaml
@@ -1,10 +1,11 @@
 config:
   <%= projectName %>:ami: ami-XXXXXXXXXXXXXXXXX
   <%= projectName %>:availabilityZone: ap-southeast-1c
+  <%= projectName %>:count: <%= count %>
   <%= projectName %>:disableApiTermination: false
   <%= projectName %>:instanceProfileProject: <%= prefix %>-aws-instance-profile
   <%= projectName %>:instanceType: t4g.small
-  <%= projectName %>:keyName: KEYNAME
+  <%= projectName %>:keyName: <%= keyName %>
   <%= projectName %>:keypairsProject: <%= prefix %>-aws-ssh-keypairs
   <%= projectName %>:name: <%= prefix %>-<%= environment %>
   <%= projectName %>:protect: false
