chore: changed references stack  using getouputs and fix

--- a/generators/aws-credentials/templates/aws-credentials/Pulumi.stack.yaml
+++ b/generators/aws-credentials/templates/aws-credentials/Pulumi.stack.yaml
@@ -10,4 +10,4 @@ config:
     # }    
   <%= projectName %>:protect: "false"
   <%= projectName %>:retainOnDelete: "false"
-  <%= projectName %>:timestamp: "<%= timestamp %>""
+  <%= projectName %>:timestamp: "<%= timestamp %>"
