chore: adding aws-security group to combined generator (#71)
* chore: adding necessary vpc prompt

* chore: adding vpc to the combined generator

* chore: removed some resources from list

* chore: cleaning

* chore: correcting aws swarm

* chore: removed projectName option

* chore: adding aws-ebs to combined generator

* chore: prompting for available zone

* chore: fix generator props

* chore: update

* chore: addgin aws-eip to combined generator

* chore: removed options

* chore: addgin aws-eip to combined generator

* chore: adding aws-resources to combined generator

* chore: removing double

* chore: removed options

* chore: adding route53 to combined generator

* chore: removed option

* chore: adding aws-security group to combined generator

* chore: remove option

---------

Co-authored-by: Anthony Phothirath <anthony.phothirath@hotmail.com>
Co-authored-by: Olivier Pichon <op@dzango.com>

--- a/generators/aws-security-group/templates/aws-security-group/Pulumi.stack.yaml
+++ b/generators/aws-security-group/templates/aws-security-group/Pulumi.stack.yaml
@@ -2,4 +2,4 @@ config:
   <%= projectName %>:name: <%= prefix %>-<%= environment %>
   <%= projectName %>:protect: false
   <%= projectName %>:retainOnDelete: false
-  <%= projectName %>:vpcProject: <%= prefix %>-aws-vpc
+  <%= projectName %>:vpcProject: <%= prefix %>-vpc
